# playwright-ai-web-framework

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-playwright-tests.yml
config/: config.py
src/ai_agents/: base_agent.py  defect_summary_agent.py  self_healing_locator_agent.py  test_case_generator_agent.py
src/core/: browser_manager.py
src/utils/: logger.py
tests/: conftest.py
tests/fixtures/: saucedemo_mock.html
tests/pages/: base_page.py  cart_page.py  login_page.py  products_page.py
tests/specs/: test_ai_self_healing.py  test_cart.py  test_login.py
