[project]
name = "playwright-ai-web-framework"
version = "1.0.0"
description = "Python Playwright web automation framework with AI-assisted agents"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-v --html=reports/report.html --self-contained-html"
testpaths = ["tests/specs"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: smoke tests",
    "regression: regression tests",
    "ai: tests using AI helper agents"
]
